--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <title>Example HTML Document</title>
+    </head>
+    <!-- This is a comment! -->
+    <body>
 
+    </body>
+</html>
